@@ -4,7 +4,7 @@
 	"description" : "Ports Streamlined Heisting's drastically improved ZEAL units to vanilla",
 	"author" : "Hoppip, made standalone by moon",
 	"contact" : "https://modworkshop.net/user/55749",
-	"version" : "4.7.1",
+	"version" : "4.7.5",
 	"color" : "0.043 0.808 0.6",
 	"image" : "mod.png"
 
