@@ -7,37 +7,39 @@
 
 	<assets base_path="assets/">
 		<group dyn_package="false" target="scripted" load_group="main">
-			<group name="units/pd2_dlc_gitgud/characters/">
-				<file :name="ene_acc_shield_new_swat/ene_acc_shield_new_swat.model"/>
-				<file :name="ene_acc_shield_new_swat/ene_acc_shield_new_swat.object"/>
+			<group target="scripted" load_group="not_zeal_medics_only">
+				<group name="units/pd2_dlc_gitgud/characters/">
+					<file :name="ene_acc_shield_new_swat/ene_acc_shield_new_swat.model"/>
+					<file :name="ene_acc_shield_new_swat/ene_acc_shield_new_swat.object"/>
 
-				<file :name="ene_acc_zeal_swat_heavy_helmet/ene_acc_zeal_swat_heavy_helmet.material_config"/>
-				<file :name="ene_acc_zeal_swat_heavy_helmet/ene_acc_zeal_swat_heavy_helmet.model"/>
+					<file :name="ene_acc_zeal_swat_heavy_helmet/ene_acc_zeal_swat_heavy_helmet.material_config"/>
+					<file :name="ene_acc_zeal_swat_heavy_helmet/ene_acc_zeal_swat_heavy_helmet.model"/>
 
-				<file :name="ene_acc_zeal_swat_helmet/ene_acc_zeal_swat_helmet.material_config"/>
-				<file :name="ene_acc_zeal_swat_helmet/ene_acc_zeal_swat_helmet.model"/>
+					<file :name="ene_acc_zeal_swat_helmet/ene_acc_zeal_swat_helmet.material_config"/>
+					<file :name="ene_acc_zeal_swat_helmet/ene_acc_zeal_swat_helmet.model"/>
 
-				<file :name="ene_zeal_swat/ene_zeal_swat.material_config"/>
-				<file :name="ene_zeal_swat/ene_zeal_swat.model"/>
-				<file :name="ene_zeal_swat/ene_zeal_swat_contour.material_config"/>
+					<file :name="ene_zeal_swat/ene_zeal_swat.material_config"/>
+					<file :name="ene_zeal_swat/ene_zeal_swat.model"/>
+					<file :name="ene_zeal_swat/ene_zeal_swat_contour.material_config"/>
 
-				<file :name="ene_zeal_swat_heavy/ene_zeal_swat_heavy.material_config"/>
-				<file :name="ene_zeal_swat_heavy/ene_zeal_swat_heavy.model"/>
-				<file :name="ene_zeal_swat_heavy/ene_zeal_swat_heavy_contour.material_config"/>
+					<file :name="ene_zeal_swat_heavy/ene_zeal_swat_heavy.material_config"/>
+					<file :name="ene_zeal_swat_heavy/ene_zeal_swat_heavy.model"/>
+					<file :name="ene_zeal_swat_heavy/ene_zeal_swat_heavy_contour.material_config"/>
 
-				<file :name="ene_zeal_swat_shield/ene_zeal_swat_shield.material_config"/>
-				<file :name="ene_zeal_swat_shield/ene_zeal_swat_shield.model"/>
-				<file :name="ene_zeal_swat_shield/ene_zeal_swat_shield_contour.material_config"/>
+					<file :name="ene_zeal_swat_shield/ene_zeal_swat_shield.material_config"/>
+					<file :name="ene_zeal_swat_shield/ene_zeal_swat_shield.model"/>
+					<file :name="ene_zeal_swat_shield/ene_zeal_swat_shield_contour.material_config"/>
 
-				<group :name="shared_textures/">
-					<file :name="swat_df.texture"/>
-					<file :name="swat_head_df.texture"/>
-					<file :name="swat_head_nm.texture"/>
-					<file :name="swat_heavy_df.texture"/>
-					<file :name="swat_heavy_head_df.texture"/>
-					<file :name="swat_heavy_head_nm.texture"/>
-					<file :name="swat_heavy_nm.texture"/>
-					<file :name="swat_nm.texture"/>
+					<group :name="shared_textures/">
+						<file :name="swat_df.texture"/>
+						<file :name="swat_head_df.texture"/>
+						<file :name="swat_head_nm.texture"/>
+						<file :name="swat_heavy_df.texture"/>
+						<file :name="swat_heavy_head_df.texture"/>
+						<file :name="swat_heavy_head_nm.texture"/>
+						<file :name="swat_heavy_nm.texture"/>
+						<file :name="swat_nm.texture"/>
+					</group>
 				</group>
 			</group>
 
